--- a/portfolio.html
+++ b/portfolio.html
@@ -87,19 +87,19 @@
                 <h1>All projects</h1>
                 <div class="project-div-container">
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div" href="project/lift99-hr.html">
                             <img class="project-img"  rel="preload" loading="eager" src="assets/HR-min.png" style="background: #253946d1;" alt="web design project for an HR company">  
-                        </div>
+                        </a>
                         <div class="project-lower-div">
                             <p class="project-title">LIFT99 HR platform</p>
                             <p class="project-tags">#Web design #Webflow development</p>
-                            <a class="project-button" href="/project/lift99-hr.html">Check it out-></a>
+                            <p class="project-button">Check it out-></p>
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div" href="/project/zbuzz.html">
                             <img class="project-img" loading="eager" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
-                        </div>
+                        </a>
                         <div class="project-lower-div">
                             <p class="project-title">ZBuzz Ecommerce</p>
                             <p class="project-tags">#Ecommerce #Webflow development</p>
@@ -107,9 +107,9 @@
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div" href="/project/lift99-dao.html">
                             <img class="project-img" loading="eager" src="assets/DAO-min.png" style="background: #311742d6;" alt="web design project for a web3 project">
-                        </div>
+                        </a>
                         <div class="project-lower-div">
                             <p class="project-title">Web3 DAO Project</p>
                             <p class="project-tags">#Web3 #DAO development</p>
@@ -117,9 +117,9 @@
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div" href="/project/mission-for-ukraine.html">
                             <img class="project-img" loading="eager" src="assets/M4U web projectr cover.jpg" style="background: white;" alt="web design project for a non-profit organisation">
-                        </div>
+                        </a>
                         <div class="project-lower-div">
                             <p class="project-title">Mission for Ukraine</p>
                             <p class="project-tags">#Non-profit #Webflow development</p>
@@ -127,19 +127,19 @@
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div"href="/project/coaching.html">
                             <img class="project-img" loading="eager" src="assets/Coaches for Ukraine-min.png" style="background: #434c5ab9;" alt="web design project for a coaching project">
-                        </div>
-                        <div class="project-lower-div">
+                        </a>
+                        <div class="project-lower-div" >
                             <p class="project-title">Coaches for Ukraine</p>
                             <p class="project-tags">#Coaching #Webflow development</p>
                             <a class="project-button" href="/project/coaching.html">Check it out-></a>
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div" href="/project/help99.html">
                             <img class="project-img" loading="eager"  src="assets/Help99-min.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation">
-                        </div>
+                        </a>
                         <div class="project-lower-div">
                             <p class="project-title">Help99 Initiative</p>
                             <p class="project-tags">#Non-profit #Webflow development</p>
@@ -147,9 +147,9 @@
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div" href="/project/ua911.html">
                             <img class="project-img" loading="eager"  src="assets/UA 911.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine">
-                        </div>
+                        </a>
                         <div class="project-lower-div">
                             <p class="project-title">UA 911 Fundraising</p>
                             <p class="project-tags">#Fundraising #Webflow development</p>
@@ -157,9 +157,9 @@
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div" href="/project/Leonardite.html">
                             <img class="project-img" loading="eager"  src="assets/AAZ web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company">
-                        </div>
+                        </a>
                         <div class="project-lower-div">
                             <p class="project-title">AAZ Fertilizer Company</p>
                             <p class="project-tags">#Fertilizer #Web design</p>
@@ -167,9 +167,9 @@
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div" href="/project/mouze.html">
                             <img class="project-img" loading="eager"  src="assets/mouze presentation 2.jpg" style="background: #F288B7; padding: 8% 0;" alt="Corporate identity design for a kid toy sharing service">
-                        </div>
+                        </a>
                         <div class="project-lower-div">
                             <p class="project-title">Mouze Magic Box</p>
                             <p class="project-tags">#Logo design #Corporate identity</p>
@@ -177,9 +177,9 @@
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div" href="/project/sudoculus.html">
                             <img class="project-img" loading="eager"  src="assets/Sudoculus-1-min.png" style="background: #4e5560ce;" alt="web design project for a mathematical game named Sudoculus">
-                        </div>
+                        </a>
                         <div class="project-lower-div">
                             <p class="project-title">Sudoculus Game</p>
                             <p class="project-tags">#Game #Web design</p>
@@ -187,9 +187,9 @@
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div" href="/project/artbay.html">
                             <img class="project-img" loading="eager" src="assets/Art of scandenavia web preview.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for an art collector">
-                        </div>
+                        </a>
                         <div class="project-lower-div">
                             <p class="project-title">Art of Scandinavia</p>
                             <p class="project-tags">#Art #Collector #Web design</p>
@@ -197,9 +197,9 @@
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div" href="/project/pilar-elias-art.html">
                             <img class="project-img" loading="eager" src="assets/Pilar-1-min.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;" alt="web design project for an artist, a painter">
-                        </div>
+                        </a>
                         <div class="project-lower-div">
                             <p class="project-title">Pilar Elias Art</p>
                             <p class="project-tags">#Art #Painting #Web design #Web coding</p>
@@ -207,9 +207,9 @@
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div" href="/project/active-mode.html">
                             <img class="project-img" rel="preload" loading="eager" src="assets/Active mode-min.png" style="background: #434c5ad1;" alt="App design with full set of icon design for Active Mode, a sport social media platform">
-                        </div>
+                        </a>
                         <div class="project-lower-div">
                             <p class="project-title">Active Mode App</p>
                             <p class="project-tags">#App design #Icon design #Sports platform</p>
@@ -217,9 +217,9 @@
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div" href="/project/sudoculus.html">
                             <img class="project-img" src="assets/Sudoculus app.jpg" alt="App design with full set of icon design for Sudoculus, a math based game">
-                        </div>
+                        </a>
                         <div class="project-lower-div">
                             <p class="project-title">Sudoculus App</p>
                             <p class="project-tags">#App design #Icon design #Math game</p>
@@ -236,11 +236,11 @@
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div" href="project/active-mode.html">
                             <div class="logo-div" style="background-image: url('assets/Active mode logo bg-min.jpg');">
                                 <img class="logo-img" alt="Custom logo design featuring geometric icon of the AM initials and bold typography for ActiveMode" rel="preload" src="assets/active mode logo.png">
                             </div>
-                        </div>
+                        </a>
                         <div class="project-lower-div">
                             <p class="project-title">ActiveMode Logo</p>
                             <p class="project-tags">#Logo design #Geometric #Typography</p>
@@ -371,11 +371,11 @@
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div" href="project/Leonardite.html">
                             <div class="logo-div" style="background: #F8F5F1;">
                                 <img class="logo-img" alt="Logo design with icon of AAZ initials for a fertilizer" loading="lazy" src="assets/aaz leonardite logo.png">
                             </div>
-                        </div>
+                        </a>
                         <div class="project-lower-div">
                             <p class="project-title">AAZ Leonardite Logo</p>
                             <p class="project-tags">#Logo design #Fertilizer #Iconic</p>
@@ -394,11 +394,11 @@
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <div class="project-uppper-div">
+                        <a class="project-uppper-div" href="project/sudoculus.html">
                             <div class="logo-div" style="background: #FFF;">
                                 <img class="logo-img" alt="sudoculus logo design for a math game" loading="lazy" src="assets/sudoculus logo.png">
                             </div>
-                        </div>
+                        </a>
                         <div class="project-lower-div">
                             <p class="project-title">Sudoculus Logo</p>
                             <p class="project-tags">#Logo design #Math Game</p>
