--- a/portfolio.html
+++ b/portfolio.html
@@ -72,6 +72,7 @@
                     <img class="client-logo" style="height: 60px;" src="assets/aaz white logo.svg">
                     <img class="client-logo" style="height: 50px;" src="assets/dao white logo.svg">
                     <img class="client-logo" style="height: 50px;" src="assets/lift99 white logo.svg">
+                    <img class="client-logo" style="height: 50px;" src="assets/arnaud logo white.svg">
                     <img class="client-logo" style="height: 50px;" src="assets/leo logo white.svg">
                     <img class="client-logo" style="height: 50px;" src="assets/skylux logo white.svg">
                     <img class="client-logo" style="height: 40px;" src="assets/m4u white logo.svg">
@@ -488,6 +489,42 @@
                 </div>
             </div>
 
+            <h1>Softwares</h1>
+            <p>20+ softwares in my CV & here are my favourites:</p>
+            <div class="client-main-div">
+                <div class="client-div">
+                    <img class="client-logo" src="assets/ai white logo.svg">
+                    <p class="client-label">Illustrator</p>
+                </div>
+                <div class="client-div">
+                    <img class="client-logo" src="assets/ps white logo.svg">
+                    <p class="client-label">Photoshop</p>
+                </div>
+                <div class="client-div">
+                    <img class="client-logo" src="assets/ae logo white.svg">
+                    <p class="client-label">After Effects</p>
+                </div>
+                <div class="client-div">
+                    <img class="client-logo" src="assets/figma white logo.svg">
+                    <p class="client-label">Figma</p>
+                </div>
+                <div class="client-div">
+                    <img class="client-logo" src="assets/webflow logo white.svg">
+                    <p class="client-label">Webflow</p>
+                </div>
+                <div class="client-div">
+                    <img class="client-logo" src="assets/3ds max white logo.svg">
+                    <p class="client-label">3DS MAX</p>
+                </div>
+                <div class="client-div">
+                    <img class="client-logo" src="assets/vs code white logo.svg">
+                    <p class="client-label">VSCode</p>
+                </div>
+                <div class="client-div">
+                    <img class="client-logo" src="assets/scratch white logo.svg">
+                    <p class="client-label">Scratch</p>
+                </div>
+            </div>
 
 
             <div class="section">
