--- a/cv.html
+++ b/cv.html
@@ -37,7 +37,8 @@
                 <p>
                     Instagram: <a target="_blank" href="https://www.instagram.com/zanzouneto">Zanzouneto</a> 
                     <br>Linkedin: <a target="_blank" href="https://www.linkedin.com/in/zeina-saade">Zeina Saade</a>   
-                    <br>Github: <a target="_blank" href="https://github.com/zanzouneto"> Zanzouneto</a>         
+                    <br>Github: <a target="_blank" href="https://github.com/zanzouneto"> Zanzouneto</a>    
+                    <br>Scratch: <a target="_blank" href="https://scratch.mit.edu/users/zanzouneto/"> Zanzouneto</a>              
                 </p>
             </div>
         </div>
@@ -298,7 +299,38 @@
         <div>
             <h2>→ Freelancing:</h2>
             <p>For a while I worked as a freelance graphic designer on many projects with many companies, NGOs & individuals.</p>
-            <p>Clients that I worked most with during that time:<a target="_blank" href="https://www.facebook.com/Angelic-Association-of-Anis-Saade-%D8%AC%D9%85%D8%B9%D9%8A%D8%A9-%D8%A3%D9%86%D9%8A%D8%B3-%D8%B3%D8%B9%D8%A7%D8%AF%D8%A9-%D8%A7%D9%84%D9%85%D9%84%D8%A7%D8%A6%D9%83%D9%8A%D8%A9-1638116516441275/?wtsid=rdr_0rpxEGzlmzXmg93DI">AAAS</a>, <a target="_blank" href="https://aazleonardite.com/">AAZ Leonardite</a>, <a target="_blank" href="https://kalyanchik.ua/">Kalyanchik</a>, <a target="_blank"ref="https://autolux.ua/">Autolux</a>, <a target="_blank"ref="https://aaz.company/uk/">AAZ trading company</a>, <a target="_blank" ref="https://l.instagram.com/?u=http%3A%2F%2Fwww.artbayofscandinavia.com%2F%3Ffbclid%3DPAAaZAJ-oB7ICdyK07yjmV2Bas19aecjnSMD8lsCssA5qNAr3LyUo3iUTFpOs_aem_AcaeIenI3q2w5R0kNxZz5pX9qC0_JDPABWUhqIniRd13tak-KfvxdkRDM8aZ-mO3Sr8&amp;e=AT1Wmv3_AawJ12ZjlK07j8J8rfF-tU_Adb3tUMCPZfpwToDVQc44swZv39qwhdlbyRyuLSK4FW0bNnYTBUTCbaC6SiYe76DIGVJtHLQKFeExjTt_9eIM">Art Bay of Scandinavia</a>, SkyLux Avia, Walid Yamout Sports, Middle Litoral….</p>
+            <ul>Clients that I worked most with during that time:
+                <li>
+                    <a target="_blank" href="https://www.facebook.com/people/Angelic-Association-of-Anis-Saade-%D8%AC%D9%85%D8%B9%D9%8A%D8%A9-%D8%A3%D9%86%D9%8A%D8%B3-%D8%B3%D8%B9%D8%A7%D8%AF%D8%A9-%D8%A7%D9%84%D9%85%D9%84%D8%A7%D8%A6%D9%83%D9%8A%D8%A9/100064734367236/">AAAS</a> 
+                </li>
+                <li>
+                    <a target="_blank" href="https://aazleonardite.com/">AAZ Leonardite</a> 
+                </li>
+                <li>
+                    <a target="_blank" href="https://kalyanchik.ua/">Kalyanchik</a>
+                </li>
+                <li>
+                    <a target="_blank"ref="https://aaz.company/uk/">AAZ trading company</a>
+                </li>
+                <li>
+                    <a target="_blank" ref="https://l.instagram.com/?u=http%3A%2F%2Fwww.artbayofscandinavia.com%2F%3Ffbclid%3DPAAaZAJ-oB7ICdyK07yjmV2Bas19aecjnSMD8lsCssA5qNAr3LyUo3iUTFpOs_aem_AcaeIenI3q2w5R0kNxZz5pX9qC0_JDPABWUhqIniRd13tak-KfvxdkRDM8aZ-mO3Sr8&amp;e=AT1Wmv3_AawJ12ZjlK07j8J8rfF-tU_Adb3tUMCPZfpwToDVQc44swZv39qwhdlbyRyuLSK4FW0bNnYTBUTCbaC6SiYe76DIGVJtHLQKFeExjTt_9eIM">Art Bay of Scandinavia</a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://numo.so/">Arnaud De Decker</a> 
+                </li>
+                <li>
+                    <a target="_blank" href="https://www.arnauddedecker.com/">NUMO ADHD</a> 
+                </li>
+                <li>
+                    SkyLux Avia
+                </li>
+                <li>
+                    Middle Litoral
+                </li>
+                <li>
+                    Walid Yamout Sports 
+                </li>
+            </ul>
         </div>
         <!-- Job entry -->
         <div>
