--- a/portfolio.html
+++ b/portfolio.html
@@ -88,13 +88,13 @@
                 <h1>All projects</h1>
                 <div class="project-div-container">
                     <div class="project-div-main">
-                        <a class="project-uppper-div" href="project/lift99-hr.html">
+                        <a class="project-uppper-div" href="/project/lift99-hr.html">
                             <img class="project-img"  rel="preload" loading="eager" src="assets/HR-min.png" style="background: #253946d1;" alt="web design project for an HR company">  
                         </a>
                         <div class="project-lower-div">
                             <p class="project-title">LIFT99 HR platform</p>
                             <p class="project-tags">#Web design #Webflow development</p>
-                            <p class="project-button">Check it out-></p>
+                            <a class="project-button" href="/project/lift99-hr.html">Check it out-></a>
                         </div>
                     </div>
                     <div class="project-div-main">
