--- a/portfolio.html
+++ b/portfolio.html
@@ -84,6 +84,8 @@
                     <img class="client-logo" style="height: 70px;" src="assets/depo white logo.svg">
                 </div>
             </div>
+        </div>
+        <div class="container-wide">
             <div class="section">
                 <h1>All projects</h1>
                 <div class="project-div-container">
@@ -188,13 +190,13 @@
                         </div>
                     </div>
                     <div class="project-div-main">
-                        <a class="project-uppper-div" href="/project/artbay.html">
-                            <img class="project-img" loading="eager" src="assets/Art of scandenavia web preview.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for an art collector">
+                        <a class="project-uppper-div" href="/project/arnaud-photography-portfolio.html">
+                            <img class="project-img" loading="eager" src="assets/Arnaud.jpg" alt="web development, photography portfolio for Arnaud De Decker">
                         </a>
                         <div class="project-lower-div">
-                            <p class="project-title">Art of Scandinavia</p>
-                            <p class="project-tags">#Art #Collector #Web design</p>
-                            <a class="project-button" href="/project/artbay.html">Check it out-></a>
+                            <p class="project-title">Arnaud De Decker photography website</p>
+                            <p class="project-tags">#Photography portfolio #Web development #Web design</p>
+                            <a class="project-button" href="/project/arnaud-photography-portfolio.html">Check it out-></a>
                         </div>
                     </div>
                     <div class="project-div-main">
@@ -205,6 +207,16 @@
                             <p class="project-title">Pilar Elias Art</p>
                             <p class="project-tags">#Art #Painting #Web design #Web coding</p>
                             <a class="project-button" href="/project/pilar-elias-art.html">Check it out-></a>
+                        </div>
+                    </div>
+                    <div class="project-div-main">
+                        <a class="project-uppper-div" href="/project/artbay.html">
+                            <img class="project-img" loading="eager" src="assets/Art of scandenavia web preview.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for an art collector">
+                        </a>
+                        <div class="project-lower-div">
+                            <p class="project-title">Art of Scandinavia</p>
+                            <p class="project-tags">#Art #Collector #Web design</p>
+                            <a class="project-button" href="/project/artbay.html">Check it out-></a>
                         </div>
                     </div>
                     <div class="project-div-main">
@@ -488,7 +500,8 @@
                     <button class="pagination-button" id="next-btn">Load More</button>
                 </div>
             </div>
-
+        </div>
+        <div class="container">
             <h1>Softwares</h1>
             <p>20+ softwares in my CV & here are my favourites:</p>
             <div class="client-main-div">
@@ -571,7 +584,15 @@
                 <h1>Something cool</h1>
                 <p>The Creation of Kalyanchik. Laser cut plywood</p>
                 <section class="center" style="margin-bottom: 60px;">
-                    <iframe loading="lazy" src="https://www.youtube.com/embed/bOcN1J2Hgeo?autoplay=1&loop=1&playlist=bOcN1J2Hgeo&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <div class="youtube-div-container">
+                        <iframe  
+                        loading="lazy" 
+                        src="https://www.youtube.com/embed/bOcN1J2Hgeo?autoplay=1&loop=1&playlist=bOcN1J2Hgeo&mute=1" 
+                        title="YouTube video player" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        allowfullscreen></iframe>
+                    </div>
                 </section>     
             </div>   
         </div>
