--- a/project/active-mode.html
+++ b/project/active-mode.html
@@ -58,7 +58,7 @@
         <img class="fullwidth w70" src="../assets/am 8.png">
     </section>
     <section>
-        <a class="next-button" href="artbay.html">Next project -></a>
+        <a class="next-button" href="arnaud-photography-portfolio.html">Next project -></a>
     </section>
     <nav-menu base-path="../"></nav-menu>
     <main-footer base-path="../"></main-footer>
