--- a/website.html
+++ b/website.html
@@ -75,6 +75,11 @@
             <a class="morebutton" href="project/Leonardite.html">Check it out -></a>
         </div>
         <div class="website-div">
+            <img class="project-img web" loading="lazy"  src="assets/Arnaud.jpg" style="background-color: black;" alt="web development, photography portfolio for Arnaud De Decker">
+            <img class="project-img phone" loading="lazy"  src="assets/Arnaud.jpg" style="background-color: black;" alt="web development, photography portfolio for Arnaud De Decker">
+            <a class="morebutton" href="project/arnaud-photography-portfolio.html">Check it out -></a>
+        </div>
+        <div class="website-div">
             <img class="project-img web" loading="lazy"  src="assets/Sudoculus-1-min.png" style="background: #4e5560ce;" alt="web design project for a mathematical game named Sudoculus">
             <img class="project-img phone" loading="lazy"  src="assets/Sudoculus phone.png" style="background: #4e5560ce;" alt="web design project for a mathematical game named Sudoculus">
             <a class="morebutton" href="project/sudoculus.html">Check it out -></a>
