--- a/hire-me.html
+++ b/hire-me.html
@@ -56,8 +56,8 @@
                 <!-- Calendly inline widget end -->
             </div>
         </div>
-        <p class="title">What others say about me</p>
-        <div class='sk-ww-linkedin-recommendations' style="margin: 50px 0;" data-embed-id='251591'></div><script src='https://widgets.sociablekit.com/linkedin-recommendations/widget.js' async defer></script>
+        <!-- <p class="title">What others say about me</p>
+        <div class='sk-ww-linkedin-recommendations' style="margin: 50px 0;" data-embed-id='251591'></div><script src='https://widgets.sociablekit.com/linkedin-recommendations/widget.js' async defer></script> -->
     </div>
     <div class="grainy-div">
         <div class="grainy">
