--- a/games/would-you-rather.html
+++ b/games/would-you-rather.html
@@ -8,16 +8,20 @@
 <body>
     <div id="player-section">
         <h2>Add Players</h2>
-        <input type="text" id="player-name" placeholder="Enter player name">
-        <button onclick="addPlayer()">Add Player</button>
+        <div class="input-outer-div">
+            <input type="text" id="player-name" placeholder="Player name">
+            <button onclick="addPlayer()">+</button>
+        </div>
         <ul id="player-list"></ul>
     </div>
     <div id="theme-section">
         <h2>Select Themes</h2>
-        <label><input type="checkbox" id="general" value="general" checked> General</label>
-        <label><input type="checkbox" id="funny" value="funny" checked> Funny</label>
-        <label><input type="checkbox" id="serious" value="serious" checked> Serious</label>
-        <label><input type="checkbox" id="adults" value="adults" checked> Adults</label>
+        <div class="themes-container">
+            <label><input type="checkbox" id="general" value="general" checked> General</label>
+            <label><input type="checkbox" id="funny" value="funny" checked> Funny</label>
+            <label><input type="checkbox" id="serious" value="serious" checked> Serious</label>
+            <label><input type="checkbox" id="adults" value="adults" checked> Adults</label>
+        </div>
         <button onclick="startGame()">Start Game</button>
     </div>
     <div id="game-section" style="display: none;">
@@ -25,7 +29,7 @@
         <p id="player"></p>
         <p id="question"></p>
         <button onclick="nextQuestion()">Next Question</button>
-        <button onclick="editPlayers()">Edit Players</button>
+        <button class="second-button" onclick="editPlayers()">Edit Players</button>
     </div>
     <div id="edit-player-section" style="display: none;">
         <h2>Edit Players</h2>
