--- a/games/taboo.html
+++ b/games/taboo.html
@@ -5,31 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taboo</title>
     <link rel="stylesheet" href="taboo.css">
+    <link rel="stylesheet" href="games-general.css">
 </head>
 <body>
     <div id="start-screen">
-        <h1>TABOO</h1>
-        <div class="intro-div">
-            <div>
-                <label for="time-interval">Time per player:</label>
-                <select id="time-interval">
-                    <option value="5">5 sec</option>
-                    <option value="60">1 Minute</option>
-                    <option value="120">2 Minutes</option>
-                    <option value="180">3 Minutes</option>
-                </select>
+        <div class="container">
+            <h1>TABOO</h1>
+        </div>
+        <div class="container">
+            <div class="intro-div">
+                <div>
+                    <label for="time-interval">Time per player:</label>
+                    <select id="time-interval">
+                        <option value="5">5 sec</option>
+                        <option value="60">1 Minute</option>
+                        <option value="120">2 Minutes</option>
+                        <option value="180">3 Minutes</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="theme">Select Theme:</label>
+                    <select id="theme">
+                        <option value="tv">Movies and TV</option>
+                        <option value="adult">Adult theme</option>
+                    </select>
+                </div>
+                <button id="start-game">Start Game</button>
             </div>
-            <div>
-                <label for="theme">Select Theme:</label>
-                <select id="theme">
-                    <option value="tv">Movies and TV</option>
-                    <option value="adult">Adult theme</option>
-                </select>
-            </div>
-            <button id="start-game">Start Game</button>
         </div>
     </div>
-
     <div id="game-board" style="display: none;">
         <div id="timer"><span id="time">60</span></div>
         <div id="card">
@@ -41,13 +45,11 @@
         <button id="pass">Pass</button>
         <button id="guessed">Guessed</button>
     </div>
-
     <div id="end-screen" style="display: none;">
         <h2>Round Over</h2>
         <p>Your score: <span id="score">0</span></p>
         <button id="new-game">Next player</button>
     </div>
-
     <script src="taboo.js"></script>
 </body>
 </html>
