--- a/games/heads-up.html
+++ b/games/heads-up.html
@@ -11,6 +11,7 @@
         <h1>Heads Up</h1>
         <label for="time">Choose time per round:</label>
         <select id="time">
+            <option value="20">20 se</option>
             <option value="60">1 minute</option>
             <option value="120">2 minutes</option>
             <option value="180">3 minutes</option>
