--- a/games/heads-up.html
+++ b/games/heads-up.html
@@ -27,6 +27,8 @@
     <div id="game-screen" style="display: none;">
         <h1 id="word-display"></h1>
         <p id="timer"></p>
+        <button id="next-button">Next</button>
+        <button id="pass-button">Pass</button>    
     </div>
     <div id="score-screen" style="display: none;">
         <h1>Score</h1>
