--- a/games/heads-up.html
+++ b/games/heads-up.html
@@ -11,7 +11,7 @@
         <h1>Heads Up</h1>
         <label for="time">Choose time per round:</label>
         <select id="time">
-            <option value="20">20 se</option>
+            <option value="20">20 seconds</option>
             <option value="60">1 minute</option>
             <option value="120">2 minutes</option>
             <option value="180">3 minutes</option>
@@ -33,6 +33,5 @@
         <ul id="score-list"></ul>
         <button id="new-round">Start New Round</button>
     </div>
-    <script src="heads-up.js"></script>
-</body>
+    <script src="heads-up.js"></script></body>
 </html>
